test/parser/closure-with-params.b3.expect
Error:
23:     forall j: int trigger SeqIndex(%s, j)
                              ^
expected '}'

